<resources>
    <string name="app_name">Golden Titty</string>
    <string name="bed">Bed</string>
    <string name="bed_icon_cd">bed_icon_cd</string>
    <string name="sleep">Sleep</string>
    <string name="leave">Leave</string>
    <string name="bed_info">When you sleep, your status gets restored and the day cycle changes.</string>
    <string name="ok">OK</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="requires">Requires</string>
    <string name="carriage">Carriage</string>
    <string name="carriage_info">You can sell your goods here. If you want to sell an item click on the coin to the right.</string>
    <string name="health_icon_cd">health_icon_cd</string>
    <string name="charisma_icon_cd">charisma_icon_cd</string>
    <string name="work_ethic_icon_cd">work_ethic_icon_cd</string>
    <string name="intelligence_icon_cd">intelligence_icon_cd</string>
    <string name="day_cycle_icon_cd">day_cycle_icon_cd</string>
    <string name="search">Search</string>
    <string name="item_icon_cd">item_icon_cd</string>
    <string name="buy">Buy</string>
    <string name="explore">Explore</string>
    <string name="sell">Sell</string>
    <string name="accept">Accept</string>
    <string name="new_deal">New deal</string>
    <string name="demand_icon_cd">demand_icon_cd</string>
    <string name="customer_icon_cd">customer_icon_cd</string>
    <string name="consume_icon_cd">consume_icon_cd</string>
    <string name="food_icon_cd">food_icon_cd</string>
    <string name="items">Items</string>
    <string name="food">Food</string>
    <string name="divine_crystals">Divine Crystals</string>
    <string name="exploration_icon_cd">exploration_icon_cd</string>
    <string name="sonny">Sonny</string>
    <string name="merchant_icon_cd">merchant_icon_cd</string>
    <string name="energy_icon_cd">energy_icon_cd</string>
    <string name="persuasion_icon_cd">persuasion_icon_cd</string>
    <string name="trade">Trade</string>
    <string name="friendship">Friendship</string>
    <string name="unlock">Unlock</string>
    <string name="clothes">Clothes</string>
    <string name="enter">Enter</string>
    <string name="creator">Creator</string>
    <string name="tell_me_about_my_mission">Tell me about my mission</string>
    <string name="i_give_up">End the game. I\'m stuck.</string>
    <string name="full_restoration">Full restoration</string>
    <string name="wear_icon_cd">wear_icon_cd</string>
    <string name="upgrade">Upgrade</string>
    <string name="golden_coin_icon_cd">golden_coin_icon_cd</string>
    <string name="seal_wax_icon_cd">seal_wax_icon_cd</string>
    <string name="library">Library</string>
    <string name="wax_seal_icon_cd">wax_seal_icon_cd</string>
    <string name="book_instruction">In order to read a book, click on its wax seal-icon. Scroll down to see more books.</string>
    <string name="five">5</string>
    <string name="ruby_icon_cd">ruby_icon_cd</string>
    <string name="sapphire_icon_cd">sapphire_icon_cd</string>
    <string name="emerald_icon_cd">emerald_icon_cd</string>
    <string name="trading_house">Trading House</string>
    <string name="change_deal">Change deal</string>
    <string name="one">1</string>
    <string name="rent_collector_line">Hi Sonny! It\'s time to pay the rent for your house. Do you have money for me?</string>
    <string name="price">Price</string>
    <string name="time_to_pay_the_rent">Time To Pay The Rent</string>
    <string name="exit">Exit to main menu</string>
    <string name="dialogue_icon_cd">dialogue_icon_cd</string>
    <string name="game_over">Game Over</string>
    <string name="game_over_info">You died from hunger…</string>
    <string name="credits">Credits</string>
    <string name="continue_game">Continue</string>
    <string name="play">Play</string>
    <string name="sonny256_icon_cd">sonny256_icon_cd</string>
    <string name="exit_game">Exit Game</string>
    <string name="save_file">Save File</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="speaker_cd_icon">speaker_cd_icon</string>
    <string name="settings">Settings</string>
    <string name="befriend">Befriend</string>
    <string name="investigate">Investigate</string>
    <string name="investigation_icon_cd">investigation_icon_cd</string>
    <string name="friends_icon_cd">friends_icon_cd</string>
    <string name="grab_icon_cd">grab_icon_cd</string>
    <string name="jin">Jin</string>
    <string name="closet">Closet</string>
    <string name="meteor">Meteor</string>
    <string name="list_of_souls_to_save">List Of Souls To Save</string>
    <string name="check_icon_cd">check_icon_cd</string>
    <string name="harp_info">Here you can either turn off or turn on the music.</string>
    <string name="play_music">Play Music</string>
    <string name="stop_music">Stop Music</string>
    <string name="harp_icon_cd">harp_icon_cd</string>
    <string name="harp">Harp</string>
    <string name="load_file">Load File</string>
    <string name="quill_info">Here you can save your progress or load the previously saved file.</string>
    <string name="quill">Quill</string>
    <string name="divine_altar">Divine Altar</string>
    <string name="meteors_altar_info">Here you can exit to main menu or quit the game entirely.</string>
    <string name="meteors_altar_icon_cd">meteors_altar_icon_cd</string>
    <string name="fab_icon_cd">fab_icon_cd</string>
    <string name="world_icon_cd">world_icon_cd</string>
    <string name="backpack_icon_cd">backpack_icon_cd</string>
    <string name="buy_icon_cd">buy_icon_cd</string>
    <string name="product_icon_cd">product_icon_cd</string>
    <string name="dig">Dig</string>
    <string name="robes_for_sale">Robes For Sale</string>
    <string name="menu">Menu</string>
    <string name="items_for_sale">Items For Sale</string>
    <string name="hourglass_icon_cd">hourglass_icon_cd</string>
    <string name="costs">Costs</string>
    <string name="restores">Restores</string>
    <string name="music_on">Music On</string>
    <string name="music_off">Music Off</string>
    <string name="tile_icon_cd">tile_icon_cd</string>
    <string name="equip_icon_cd">equip_icon_cd</string>
    <string name="boomerangs">Boomerangs</string>
    <string name="dates_icon_cd">dates_icon_cd</string>
    <string name="coconut_icon_cd">coconut_icon_cd</string>
    <string name="bird_icon_cd">bird_icon_cd</string>
    <string name="peaches_icon_cd">peaches_icon_cd</string>
    <string name="switch_on">Switch On</string>
    <string name="destruction">Destruction</string>
    <string name="in_demand">In Demand</string>
    <string name="courses">Courses</string>
    <string name="education">Education</string>
    <string name="pearl_titty_icon_cd">pearl_titty_icon_cd</string>
    <string name="run_icon_cd">run_icon_cd</string>
    <string name="jump_icon_cd">jump_icon_cd</string>
    <string name="climb_icon_cd">climb_icon_cd</string>
    <string name="action_icon_cd">action_icon_cd</string>
    <string name="success">Success</string>
    <string name="start">Start</string>
    <string name="accuracy_icon_cd">accuracy_icon_cd</string>
    <string name="agility_icon_cd">agility_icon_cd</string>
    <string name="stealth_icon_cd">stealth_icon_cd</string>
    <string name="timer_icon_cd">timer_icon_cd</string>
    <string name="notes">Notes</string>
    <string name="key_items">Key Items</string>
    <string name="cost">Cost</string>
    <string name="trance">Trance</string>
    <string name="chest">Chest</string>
    <string name="info_icon_cd">info_icon_cd</string>
    <string name="hide">Hide</string>
    <string name="sneak">Sneak</string>
    <string name="try_to_open">Try to open</string>
    <string name="open">Open</string>
    <string name="upgrade_icon_cd">upgrade_icon_cd</string>
    <string name="golden_titty">Golden Titty</string>
    <string name="for_sale">For Sale</string>
    <string name="drink_price">10</string>
    <string name="notebook">Notebook</string>
    <string name="temple_floor_icon_cd">temple_floor_icon_cd</string>
    <string name="pearl_titty_altar">Pearl Titty Altar</string>
    <string name="take">Take</string>
    <string name="temple_of_latter_day_vagina_rapture">Temple Of Latter Day Vagina Rapture</string>
    <string name="enemy_s_health">Enemy\'s Health</string>
    <string name="skills">Skills</string>
    <string name="tool_icon_cd">tool_icon_cd</string>
    <string name="lift_icon_cd">lift_icon_cd</string>
    <string name="dig_icon_cd">dig_icon_cd</string>
    <string name="smash_icon_cd">smash_icon_cd</string>
    <string name="stone_icon_cd" />
    <string name="wood_icon_cd">wood_icon_cd</string>
    <string name="cave">Cave</string>
    <string name="tools">Tools</string>
    <string name="palm">Palm</string>
    <string name="wood_palm_icon_cd">wood_palm_icon_cd</string>
    <string name="power">Power</string>
    <string name="successful_cut">Successful Cut</string>
    <string name="cut">Cut</string>
    <string name="take_a_swing">Take a swing</string>
    <string name="sleeping_bag">Sleeping Bag</string>
    <string name="construction_icon_cd">construction_icon_cd</string>
    <string name="build">Build</string>
    <string name="make_icon_cd">make_icon_cd</string>
    <string name="golden_titty_icon_cd">golden_titty_icon_cd</string>
    <string name="health">Health</string>
    <string name="feed">Feed</string>
    <string name="talk">Talk</string>
    <string name="ask">Ask</string>
    <string name="fish_icon_cd">fish_icon_cd</string>
    <string name="iron_icon_cd">iron_icon_cd</string>
    <string name="camp_fire">Camp Fire</string>
    <string name="ingredient_icon_cd">ingredient_icon_cd</string>
    <string name="enemy_health">Enemy Health</string>
    <string name="tempel_door_icon_cd">temple_door_icon</string>
    <string name="temple_door_icon_cd">temple_door_icon_cd</string>
    <string name="temple_ruins">Temple Ruins</string>
    <string name="attack_icon_cd">attack_icon_cd</string>
    <string name="insert">Insert</string>
    <string name="demon_statue">Demon Statue</string>
    <string name="take_it">Take It</string>
    <string name="statue_of_goddess_chidinma">Statue of Goddess Chidinma</string>
</resources>