<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@drawable/super_light_gradient_background">

    <ImageView
        android:id="@+id/lift_button"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/light_oval_gradient_button_background"
        android:contentDescription="@string/lift_icon_cd"
        android:padding="10dp"
        android:src="@drawable/lift64" />

    <ImageView
        android:contentDescription="@string/dig_icon_cd"
        android:id="@+id/dig_button"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:padding="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/light_oval_gradient_button_background"
        android:src="@drawable/dig64"
        android:layout_gravity="center"/>

    <ImageView
        android:contentDescription="@string/smash_icon_cd"
        android:id="@+id/smash_button"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:padding="10dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/smash64"
        android:background="@drawable/light_oval_gradient_button_background"
        android:layout_gravity="center"/>

    <ImageView
        android:contentDescription="@string/climb_icon_cd"
        android:id="@+id/action_button"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/start_button64"
        android:background="@drawable/middle_dark_oval_gradient_button_background"
        android:layout_gravity="center"/>
</LinearLayout>