<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="horizontal"
    android:padding="5dp"
    android:background="@drawable/dark_rectangle_gradient_button_background">

    <ImageView
        android:contentDescription="@string/emerald_icon_cd"
        android:id="@+id/emerald"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:background="@drawable/extreme_dark_oval_background"/>

    <ImageView
        android:contentDescription="@string/sapphire_icon_cd"
        android:id="@+id/sapphire"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:background="@drawable/extreme_dark_oval_background"/>

    <ImageView
        android:contentDescription="@string/ruby_icon_cd"
        android:id="@+id/ruby"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:background="@drawable/extreme_dark_oval_background"/>

</LinearLayout>