<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:columnCount="2">

    <TextView
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_gravity="start|center_horizontal"
        android:gravity="center"
        android:textColor="@color/super_light_mystery"
        android:textSize="20sp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/settings"
        android:background="@drawable/dark_one_corner_rectangle_background"/>

    <GridLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <ImageView
            android:contentDescription="@string/speaker_cd_icon"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/speaker128"
            android:background="@drawable/left_extreme_dark_shape_background"/>

        <RadioGroup
            android:layout_column="1"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:orientation="horizontal"
            android:background="@drawable/right_middle_dark_shape_background"
            android:layout_height="128dp">

            <RadioButton
                android:id="@+id/on_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                android:textColor="@color/extreme_dark_mystery"
                android:shadowColor="@color/extreme_dark_mystery"
                android:textSize="18sp"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/raleway_medium"
                android:buttonTint="@color/extreme_dark_mystery"
                android:layout_gravity="center"/>

            <RadioButton
                android:id="@+id/off_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"
                android:textSize="18sp"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/raleway_medium"
                android:textColor="@color/extreme_dark_mystery"
                android:shadowColor="@color/extreme_dark_mystery"
                android:buttonTint="@color/extreme_dark_mystery"
                android:layout_gravity="center"/>

        </RadioGroup>

    </GridLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:backgroundTint="@null"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/light_mystery"
        android:textSize="18sp"
        android:text="@string/save_file"
        android:gravity="center"
        android:background="@drawable/dark_shape_gradient_button_background"/>

    <Button
        android:id="@+id/main_menu_button"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:backgroundTint="@null"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/light_mystery"
        android:textSize="18sp"
        android:text="@string/exit"
        android:gravity="center"
        android:background="@drawable/dark_shape_gradient_button_background"/>

    <Button
        android:id="@+id/exit_button"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:backgroundTint="@null"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/light_mystery"
        android:textSize="18sp"
        android:text="@string/exit_game"
        android:gravity="center"
        android:background="@drawable/dark_shape_gradient_button_background"/>

</LinearLayout>