<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@drawable/extreme_dark_rectangle_background"
    android:layout_column="6">

    <ImageView
        android:contentDescription="@string/health_icon_cd"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_marginStart="3dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="start|center"
        android:background="@drawable/extreme_dark_rectangle_background"
        android:src="@drawable/health32"
        android:padding="3dp"/>

    <TextView
        android:id="@+id/health_cost"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="start|center"
        android:gravity="center"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/super_light_mystery"
        android:textSize="18sp"
        android:layout_marginStart="3dp"
        android:background="@drawable/middle_dark_rectangle_background"/>

    <TextView
        android:layout_column="2"
        android:layout_row="0"
        android:layout_width="85dp"
        android:layout_height="32dp"
        android:layout_gravity="start|center"
        android:gravity="center"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/super_light_mystery"
        android:textSize="18sp"
        android:layout_marginStart="3dp"
        android:text="@string/restores"
        android:background="@drawable/extreme_dark_rectangle_background"/>


    <ImageView
        android:contentDescription="@string/accuracy_icon_cd"
        android:layout_column="3"
        android:layout_row="0"
        android:layout_marginStart="3dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="start|center"
        android:background="@drawable/extreme_dark_rectangle_background"
        android:src="@drawable/accuracy32"
        android:padding="3dp"/>

    <ImageView
        android:contentDescription="@string/agility_icon_cd"
        android:layout_column="4"
        android:layout_row="0"
        android:layout_marginStart="3dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="start|center"
        android:background="@drawable/extreme_dark_rectangle_background"
        android:src="@drawable/agility32"
        android:padding="3dp"/>

    <ImageView
        android:contentDescription="@string/stealth_icon_cd"
        android:layout_column="5"
        android:layout_row="0"
        android:layout_marginStart="3dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="start|center"
        android:background="@drawable/extreme_dark_rectangle_background"
        android:src="@drawable/stealth32"
        android:padding="3dp"/>



</GridLayout>