<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:columnCount="2">

    <TextView
        android:layout_width="280dp"
        android:layout_height="35dp"
        android:layout_gravity="start|center_horizontal"
        android:gravity="center"
        android:textColor="@color/super_light_mystery"
        android:textSize="20sp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/harp"
        android:background="@drawable/dark_one_corner_rectangle_background"/>

    <GridLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <ImageView
            android:id="@+id/icon"
            android:contentDescription="@string/harp_icon_cd"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:background="@drawable/left_extreme_dark_shape_background"/>

        <LinearLayout
            android:layout_column="1"
            android:layout_row="0"
            android:layout_width="200dp"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:columnCount="3"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/right_middle_dark_shape_background"
            android:layout_height="108dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/extreme_dark_mystery"
                android:textSize="17sp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/harp_info"
                android:fontFamily="@font/raleway_medium"/>

        </LinearLayout>

    </GridLayout>

    <Button
        android:id="@+id/play_music_button"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:backgroundTint="@null"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/light_mystery"
        android:textSize="18sp"
        android:text="@string/play_music"
        android:gravity="center"
        android:background="@drawable/dark_rectangle_gradient_button_background"/>

    <Button
        android:id="@+id/stop_music_button"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:backgroundTint="@null"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/light_mystery"
        android:textSize="18sp"
        android:text="@string/stop_music"
        android:gravity="center"
        android:background="@drawable/dark_rectangle_gradient_button_background"/>

    <Button
        android:id="@+id/leave_button"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:backgroundTint="@null"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/light_mystery"
        android:textSize="18sp"
        android:text="@string/leave"
        android:gravity="center"
        android:background="@drawable/dark_rectangle_gradient_button_background"/>

</LinearLayout>