<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@drawable/extreme_dark_rectangle_background"
    android:layout_column="7">

    <ImageView
        android:contentDescription="@string/stealth_icon_cd"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_marginStart="3dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="start|center"
        android:background="@drawable/extreme_dark_rectangle_background"
        android:src="@drawable/stealth32"
        android:padding="3dp"/>

    <TextView
        android:layout_column="1"
        android:layout_row="0"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="start|center"
        android:gravity="center"
        android:fontFamily="@font/raleway_medium"
        android:textColor="@color/super_light_mystery"
        android:textSize="18sp"
        android:layout_marginStart="3dp"
        android:text="@string/one"
        android:background="@drawable/middle_dark_rectangle_background"/>

    <ImageView
        android:id="@+id/info_button"
        android:contentDescription="@string/info_icon_cd"
        android:layout_column="2"
        android:layout_row="0"
        android:layout_marginEnd="10dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="end|center"
        android:background="@drawable/dark_oval_gradient_button_background"
        android:src="@drawable/info32"
        android:padding="3dp"/>

</GridLayout>